[tool.poetry]
name = "tabnewscli"
version = "0.1.0"
description = "A CLI to access tabnews.com.br in terminal"
authors = ["Mário Victor Ribeiro Silva <mariovictorrs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
